package NTesting;

message TLogRow {
    optional string Url = 1;
    optional uint64 Timestamp = 2;
    optional uint64 AddTimeFull = 3;
    optional string UrlsLogType = 4;
    optional string FilterStatus = 5;
    optional string Data = 6;
}
